# viz_tools

viz_active/: README.md  package.xml  setup.cfg  setup.py
viz_active/viz_active/: viz_active.py  viz_active_test_client.py
viz_bringup/: CMakeLists.txt  README.md  package.xml
viz_bringup/config/: scenario_1.rviz
viz_bringup/launch/: scenario_1.launch.py
viz_dynamic/: CMakeLists.txt  Cargo.toml  package.xml
viz_dynamic/src/: viz_dynamic.rs  viz_dynamic_test.rs
viz_interactive/: README.md  package.xml  setup.cfg  setup.py
viz_interactive/viz_interactive/: viz_interactive.py
viz_static/: README.md  package.xml  setup.cfg  setup.py
viz_static/viz_static/: viz_static.py
viz_tools_msgs/: CMakeLists.txt  README.md  package.xml
viz_tools_msgs/msg/: Visualize.msg
viz_tools_msgs/srv/: ManipulateDynamicMarker.srv  VisualizeArray.srv
