[package]
name = "viz_dynamic"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2018"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.5.3" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "viz_dynamic"
path = "src/viz_dynamic.rs"

[[bin]]
name = "viz_dynamic_test"
path = "src/viz_dynamic_test.rs"